# gullakAPIPoC

./: Pipfile  interactive_console_output.xml  pyproject.toml  requirements.txt
API/Tests/: FileImports.robot  SanityTests.robot
API/Utils/: Config.robot  Helpers.robot  TestData.json
API/Utils/Features/: Common.robot  Goal.robot  Home.robot  Login.robot
